// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkMapMarker should render correctly with "status" attribute as "focused" 1`] = `
<DocumentFragment>
  <div>
    <div
      class="mock-overlay-view"
    />
    <button
      class="bpk-price-marker__wrapper"
      type="button"
    >
      <span
        class="bpk-text bpk-text--label-1 bpk-price-marker bpk-price-marker-focused"
      >
        £120
      </span>
      <div
        class="bpk-price-marker__arrow bpk-price-marker__arrow-focused"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkMapMarker should render correctly with "status" attribute as "viewed" 1`] = `
<DocumentFragment>
  <div>
    <div
      class="mock-overlay-view"
    />
    <button
      class="bpk-price-marker__wrapper"
      type="button"
    >
      <span
        class="bpk-text bpk-text--label-2 bpk-price-marker bpk-price-marker-viewed"
      >
        £120
      </span>
      <div
        class="bpk-price-marker__arrow bpk-price-marker__arrow-viewed"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkMapMarker should render correctly with a "arrowClassName" attribute 1`] = `
<DocumentFragment>
  <div>
    <div
      class="mock-overlay-view"
    />
    <button
      class="bpk-price-marker__wrapper"
      type="button"
    >
      <span
        class="bpk-text bpk-text--label-2 bpk-price-marker bpk-price-marker-default"
      >
        £120
      </span>
      <div
        class="bpk-price-marker__arrow bpk-price-marker__arrow-default custom-class-1 custom-class-2"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkMapMarker should render correctly with a "buttonProps" attribute 1`] = `
<DocumentFragment>
  <div>
    <div
      class="mock-overlay-view"
    />
    <button
      class="bpk-price-marker__wrapper"
      testid="arbitrary value"
      type="button"
    >
      <span
        class="bpk-text bpk-text--label-2 bpk-price-marker bpk-price-marker-default"
      >
        £120
      </span>
      <div
        class="bpk-price-marker__arrow bpk-price-marker__arrow-default"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkMapMarker should render correctly with a "className" attribute 1`] = `
<DocumentFragment>
  <div>
    <div
      class="mock-overlay-view"
    />
    <button
      class="bpk-price-marker__wrapper"
      type="button"
    >
      <span
        class="bpk-text bpk-text--label-2 bpk-price-marker bpk-price-marker-default custom-class-1 custom-class-2"
      >
        £120
      </span>
      <div
        class="bpk-price-marker__arrow bpk-price-marker__arrow-default"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkMapMarker should render correctly with a "disabled" attribute 1`] = `
<DocumentFragment>
  <div>
    <div
      class="mock-overlay-view"
    />
    <button
      class="bpk-price-marker__wrapper"
      disabled=""
      type="button"
    >
      <span
        class="bpk-text bpk-text--label-2 bpk-price-marker bpk-price-marker-default bpk-price-marker-disabled"
      >
        Sold out
      </span>
      <div
        class="bpk-price-marker__arrow bpk-price-marker__arrow-default bpk-price-marker__arrow-disabled"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkMapMarker should render correctly with a "onClick" attribute 1`] = `
<DocumentFragment>
  <div>
    <div
      class="mock-overlay-view"
    />
    <button
      class="bpk-price-marker__wrapper"
      type="button"
    >
      <span
        class="bpk-text bpk-text--label-2 bpk-price-marker bpk-price-marker-default bpk-price-marker--dynamic"
      >
        £120
      </span>
      <div
        class="bpk-price-marker__arrow bpk-price-marker__arrow-default"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkMapMarker should render properly 1`] = `
<DocumentFragment>
  <div>
    <div
      class="mock-overlay-view"
    />
    <button
      class="bpk-price-marker__wrapper"
      type="button"
    >
      <span
        class="bpk-text bpk-text--label-2 bpk-price-marker bpk-price-marker-default"
      >
        £120
      </span>
      <div
        class="bpk-price-marker__arrow bpk-price-marker__arrow-default"
      />
    </button>
  </div>
</DocumentFragment>
`;
